src/main/java/org/example/design/solid/liskov/good/Birds.java
package org.example.design.solid.liskov.good;

public class Birds {
    public void makeSound() {
        System.out.println("i can sound");
    }
}
