src/main/java/org/example/design/solid/liskov/bad/Bird.java
package org.example.design.solid.liskov.bad;

public class Bird {
    public void fly() {
        System.out.println("i can fly");
    }

    public void makeSound() {
        System.out.println("i can sound");
    }
}
